--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bem-vue",
   "version": "1.0.0",
   "description": "A vue mixin for manipulating BEM components",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -13,5 +14,9 @@
   "keywords": [
     "bem",
     "vue"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0"
+  }
 }
